--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -13,24 +13,28 @@ h1 {
   width: 100%;
 }
 
-
+body {
+	margin-top: 30px;
+}
 
 p {
   border: 1px solid black;
   /*background-color: #A52A2A; */
   background-color: #7D7D7D;
   width: 90%;
-  height: 150px;
+  height: 130px;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
   color: white;
   overflow: auto;
   margin-top: 30px;
-  padding: 30px 10px 15px 10px;
+  padding: 30px 10px 0px 15px;
+  position: relative;
+
 }
 
-#p1 {
+/*#p1 {
 	position: relative;
 } 
 
@@ -40,7 +44,7 @@ p {
 
 #p3 {
 	position: relative;
-} 
+} */
 
 #chicken {
 	color: black;
@@ -48,10 +52,12 @@ p {
 	top: 0px;
 	right: 0px;
 	margin: auto;
-	width: 30%;
-	height: 15%;
+	width: 33%;
+	height: 20%;
 	border: 1px solid black;
 	text-align: center;
+	font-weight: bold;
+	padding: 5px;
 	background-color: red;
 }
 
@@ -61,10 +67,12 @@ p {
 	top: 0px;
 	right: 0px;
 	margin: auto;
-	width: 30%;
-	height: 15%;
+	width: 33%;
+	height: 20%;
 	border: 1px solid black;
 	text-align: center;
+	font-weight: bold;
+	padding: 5px;
 	background-color: lightgreen
 }
 
@@ -74,10 +82,12 @@ p {
 	top: 0px;
 	right: 0px;
 	margin: auto;
-	width: 30%;
-	height: 15%;
+	width: 33%;
+	height: 20%;
 	border: 1px solid black;
 	text-align: center;
+	font-weight: bold;
+	padding: 5px;
 	background-color: lightblue;
 }
 
